[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/music/Juhani Junkala [Retro Game Music Pack] Ending.wav" type="AudioStream" id=1]
[ext_resource path="res://src/Screens/Settings.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/UserInterface/BackButton.gd" type="Script" id=6]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.77552
margin_bottom = 3.77551
theme = ExtResource( 5 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -219.0
margin_top = -104.0
margin_right = -58.0
margin_bottom = -38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="Menu" instance=ExtResource( 3 )]
margin_right = 161.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 80, 30 )
text = "Back"
script = ExtResource( 6 )
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -42.824
autoplay = true
bus = "Music"

[node name="Options" type="VBoxContainer" parent="."]
margin_left = 135.0
margin_top = 262.479
margin_right = 452.0
margin_bottom = 430.479
rect_scale = Vector2( 2.5, 2.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_God_mode" type="CheckBox" parent="Options"]
margin_right = 155.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 78, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "God Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_enable_shields" type="CheckBox" parent="Options"]
margin_top = 43.0
margin_right = 215.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 108, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
pressed = true
text = "Enable Shields"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_enable_audio" type="CheckBox" parent="Options"]
margin_top = 86.0
margin_right = 198.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 99, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
pressed = true
text = "Enable Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_enable_particles" type="CheckBox" parent="Options"]
margin_top = 129.0
margin_right = 317.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 159, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
pressed = true
text = "Enable Particle Effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 135.0
margin_top = 151.019
margin_right = 317.0
margin_bottom = 182.019
rect_scale = Vector2( 2.5, 2.5 )
text = "Game Options"
[connection signal="mouse_entered" from="Menu/BackButton" to="Menu/BackButton" method="_on_BackButton_mouse_entered"]
[connection signal="mouse_exited" from="Menu/BackButton" to="Menu/BackButton" method="_on_BackButton_mouse_exited"]
[connection signal="button_up" from="Options/Option_God_mode" to="." method="_on_Option_God_mode_button_up"]
[connection signal="button_up" from="Options/Option_enable_shields" to="." method="_on_Option_enable_shields_button_up"]
[connection signal="button_up" from="Options/Option_enable_audio" to="." method="_on_Option_enable_audio_button_up"]
[connection signal="button_up" from="Options/Option_enable_particles" to="." method="_on_Option_enable_particles_button_up"]
